<resources>
    <string name="app_name">Weather App</string>

    <string name="temp_format_details">%s °C</string>
    <string name="pressure_format">%s hPa</string>
    <string name="percents_format">%s %%</string>
    <string name="wind_speed_format">%s m/sec</string>
    <string name="wind_direction_format">%s°</string>
    <string name="precipitation_format">%s mm</string>
    <string name="current_city_format" formatted="false">%s, %S</string>
    <string name="city_txt">City:</string>
    <string name="country_code_txt">Country code:</string>
    <string name="min_temp_txt">Min temperature:</string>
    <string name="max_temp_txt">Max temperature:</string>
    <string name="pressure_txt">Pressure:</string>
    <string name="humidity_txt">Humidity:</string>
    <string name="clouds_txt">Clouds:</string>
    <string name="wind_speed_txt">Wind speed:</string>
    <string name="wind_dir_txt">Wind direction:</string>
    <string name="rain_txt">Rain:</string>
    <string name="snow_txt">Snow:</string>
    <string name="refresh_txt">Refresh</string>
    <string name="preferences_label">Preferences</string>
    <string name="no_internet_txt">No Internet connection</string>

    <string-array name="interval_names">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>

    <string-array name="interval_values">
        <item>1</item>
        <item>5</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>

</resources>
