<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="35sp" />

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="5dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/weather_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#fff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/min_temp_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/min_temp"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/max_temp_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/max_temp"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/pressure_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pressure"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/humidity_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/humidity"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/clouds_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clouds"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/wind_speed_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wind_speed"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/wind_dir_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wind_dir"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rain_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/rain_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rain"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/snow_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    style="@style/DetailsFont"
                    android:paddingBottom="5dp"
                    android:text="@string/snow_txt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/snow"
                    style="@style/DetailsFont"
                    android:paddingLeft="5dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>